fix header on mobile

--- a/pages/index.css
+++ b/pages/index.css
@@ -19,6 +19,9 @@
 	}
 	.header {
 		margin-top: 28px;
+		justify-content: flex-start;
+		padding: 0;
+		margin-left: 27px;
 	}
 
 	.profile {
